--- a/TARpe22Shop.ApplicationServices/TARpe22ShopVaitmaa.ApplicationServices.csproj
+++ b/TARpe22Shop.ApplicationServices/TARpe22ShopVaitmaa.ApplicationServices.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.2.7" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
+    <PackageReference Include="Nancy" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
