--- a/TARpe22ShopVaitmaa.SpaceshipTest/TARpe22ShopVaitmaa.SpaceshipTest.csproj
+++ b/TARpe22ShopVaitmaa.SpaceshipTest/TARpe22ShopVaitmaa.SpaceshipTest.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.25" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
     <PackageReference Include="xunit" Version="2.6.2" />
   </ItemGroup>
 
